--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "test",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "react-testing-jest_rtl-repo",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "test": "jest"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+  "keywords": [],
+  "author": "Eric Nkaka",
+  "license": "ISC",
   "devDependencies": {
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "jest": "^29.7.0"
   }
 }
